# AimTrainer

./: LICENSE  pyproject.toml
src/: tutorial.py
